package Strategy;

public abstract class CashSuper
{
	public abstract double acceptCash(double money);
}